--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Работа с GIT</title>
   </head>
   <body>
+    <h2>Hello</h2>
     <p>GIT + GitHub</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nam atque
+      accusamus repellat! Consectetur ratione magni asperiores ipsam ipsa minus?
+    </p>
     <a href="#">give me a link</a>
   </body>
 </html>
