[CHORE] Placed image-placeholder
Placed image-placeholder https://place-hold.it/

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nam atque
       accusamus repellat! Consectetur ratione magni asperiores ipsam ipsa minus?
     </p>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore,
+      eveniet?
+    </p>
+    <img src="https://place-hold.it/300x500" alt="placehold_picture" />
     <a href="#">give me a link</a>
   </body>
 </html>
