about this site

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore,
       eveniet?
     </p>
+    <h3>About this site</h3>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe inventore,
+      omnis quis consectetur cupiditate aliquam perspiciatis repellendus eaque
+      nostrum iste? Amet iste mollitia vero? Culpa sequi quis tempora debitis
+      non.
+    </p>
     <img src="https://place-hold.it/300x500" alt="placehold_picture" />
     <a href="#">give me a link</a>
   </body>
