added menu template

--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
       accusamus repellat! Consectetur ratione magni asperiores ipsam ipsa minus?
     </p>
     <a href="#">give me a link</a>
+    <ul>
+      <li><a href="#">Text 1</a></li>
+      <li><a href="#">Text 2</a></li>
+      <li><a href="#">Text 3</a></li>
+      <li><a href="#">Text 4</a></li>
+    </ul>
   </body>
 </html>
