--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </p>
     <a href="#">give me a link</a>
     <ul>
-      <li><a href="#">Text 1</a></li>
-      <li><a href="#">Text 2</a></li>
-      <li><a href="#">Text 3</a></li>
-      <li><a href="#">Text 4</a></li>
+      <li><a href="#">Shop</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Delivery</a></li>
+      <li><a href="#">Contacts</a></li>
     </ul>
   </body>
 </html>
