added image description

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       eveniet?
     </p>
     <img src="https://place-hold.it/300x500" alt="placehold_picture" />
+    <span>Pic 1. Placehold-image</span>
     <a href="#">give me a link</a>
   </body>
 </html>
