added new image placehold

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       non.
     </p>
     <img src="https://place-hold.it/300x500" alt="placehold_picture" />
+    <span>new image placeholder</span>
     <a href="#">give me a link</a>
   </body>
 </html>
