--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nam atque
       accusamus repellat! Consectetur ratione magni asperiores ipsam ipsa minus?
     </p>
+    <input type="date" name="date_time" id="date" />
     <a href="#">give me a link</a>
   </body>
 </html>
