Added todo (tasks) list

--- a/Git_fullcourse_by_WebDevGromMax/index.html
+++ b/Git_fullcourse_by_WebDevGromMax/index.html
@@ -9,6 +9,12 @@
     <p>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores
       debitis modi, sunt consequuntur porro voluptates.
+      <ul>
+          <li>Task 1</li>
+          <li>Task 2</li>
+          <li>Task 3</li>
+          <li>Task 4</li>
+      </ul>
     </p>
   </body>
 </html>
